# DataVisualizer

./: .gitignore  Cargo.toml  README.md  rocket.toml  script.sh
frontEnd/: package-lock.json  package.json
frontEnd/src/: App.tsx  Table.tsx  http2-client.d.ts  index.css  index.tsx  interfaces.ts  react-table-config.d.ts
frontEnd/src/Components/GoodVisualizer/: index.tsx
frontEnd/src/Components/Graph/: index.tsx
frontEnd/src/Components/Home/: index.tsx
frontEnd/src/Components/MarketVisualizer/: index.css  index.tsx
frontEnd/src/Components/Pie/: index.tsx
frontEnd/src/Components/Table/: index.css  index.tsx
frontEnd/src/Components/TraderInfo/: index.tsx
frontEnd/src/Components/TraderPicker/: index.css  index.tsx
src/: interfaces.rs  main.rs
