[package]
name = "DataVisualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfb = {version = "0.1.0", registry = "kellnr"}
RCNZ = {version = "0.1.0", registry = "kellnr"}
ZSE = {version = "0.1.3", registry = "kellnr"}
unitn_market_2022 = {version = "1.0.10", registry = "kellnr"}
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.130"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
getrandom = "0.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]